# protosnake

./: Cargo.toml
src/: main.rs
src/new/: base.rs  mod.rs  sockets.rs
src/old/: base.rs  client.rs  mod.rs  server.rs  sockets.rs
src/snakes/: mod.rs  snakes.rs
src/tui/: base.rs  browse.rs  config.rs  dirrect.rs  err.rs  game.rs  menu.rs  mod.rs  modal.rs
